--- a/frontend/src/components/Header/Navbar.module.css
+++ b/frontend/src/components/Header/Navbar.module.css
@@ -36,7 +36,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  gap: 65px;
+  gap: 48px;
 }
 .navList a {
   text-decoration: none;
@@ -71,12 +71,11 @@
   background-color: transparent;
   color:#FFFFFF; 
   border: none;
-  padding: 16px 38px; 
+  
   border-radius: 26px; 
-  font-size: 14px; 
   cursor: pointer; 
   border: 1px solid white;
-  font: normal normal normal 16px/13px Novar;
+  font: normal normal 600 16px/20px Open Sans;
   
 
 }
