--- a/frontend/src/components/WhatWeDo/whatWe.css
+++ b/frontend/src/components/WhatWeDo/whatWe.css
@@ -1,129 +1,96 @@
-.what-we-container {
-  background-color: #F5F5F5;
-  padding: 8vh 0vh;
+/* Container styling */
+.container-custom {
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 12px; /* Adjust padding as needed */
+  background-color: #FFFFFF;
 }
 
-
-.what-we-container .counting-btn {
-  border: none;
-  border-radius: 50px;
-  padding: 0px 26px;
+/* Text styling */
+.container-custom .h2-main {
+  color: #3F1626; 
   font-size: 22px;
-  color: #070707;
-  font-weight: 600;
-  margin-right: 8px;
-  background-color: #C7C7C7;
-  align-items: center;
-}
-
-.what-we-container .what-we-main {
-  padding: 4vh 0vh;
-  align-items: center;
-}
-
-.what-we-container .head-h3 {
-  padding: 0px 14px;
-}
-
-.what-we-container .para_main {
   margin-top: 22px;
 }
-.what-we-container .left-section {
-  padding: 3vh 4vh;
-}
 
-/* .what-we-container .button-container {
-  padding: 2vh 0vh;
-}
-
-.what-we-container .connect-button {
-  
+/* .container-custom .font-weight-bold-custom {
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  color: black;
+  font-size: 45px;
+  margin-top: 22px;
 } */
- 
-.what-we-container .swiper-pagination {
-  display: flex;
-  /* flex-direction: column; */
-  gap: 5px;
+
+/* Card styling */
+.container-custom .card-custom {
+  height: 100%;
+  border-radius: 10px;
+  background-color: #131313;
+  padding: 35px 120px;
+  align-items: center;
+  width: 100%;
   justify-content: center;
-  /* position: absolute;
-  left: -50px;
-  top: 50%; */
-  transform: translateY(-50%);
+  /* height: 250px; */
+  box-shadow: 0px 4px 20px -0px rgba(0,0,0,.1), /* Top shadow */
+  0px 4px 20px -0px rgba(0,0,0,.1);  /* Bottom shadow */
 }
 
-.what-we-container .swiper-pagination .swiper-pagination-bullet {
-  background-color: #a6a5a581;
-  opacity: 1;
-  width: 11px;
-  height: 11px;
+.container-custom .card-title-custom {
+  font: normal normal bold 80px/89px Open Sans;
+letter-spacing: 3.04px;
+color: #ACF96D;
+opacity: 1;
+padding: 20px 28px;
 }
 
-.what-we-container .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #a6a5a581;
-  opacity: 1;
-  width: 13px;
-  height: 13px;
-  position: relative;
+.container-custom .card-text-custom {
+  font: normal normal normal 18px/30px Open Sans;
+letter-spacing: 0px;
+color: #9F9F9F;
+text-align: center;
+}
+
+/* Media queries for responsiveness */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .container-custom .font-weight-bold-custom {
+      font-size: 24px;
+  }
+  .container-custom .card-custom {
+      padding: 5px 6px;
+  }
   
 }
-.what-we-container .swiper-pagination .swiper-pagination-bullet-active::before {
-  content: " ";
-  display: flex;
-  border-radius: 50%;
-  width: 22px;
-  height:22px;
-  border: 2px solid #a6a5a581;
-  position: absolute;
-  top: -4.3px;
-    left: -4.8px;
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+  .container-custom .font-weight-bold-custom {
+      font-size: 30px;
+  }
+  .container-custom .card-custom {
+      padding: 5px 8px;
+  }
 }
 
-
-
-@media (max-width: 768px) {
-  .what-we-container .text-and-button{
-    padding: 2vh 0vh;
-    text-align: center;
-    justify-content: center;
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .container-custom .font-weight-bold-custom {
+      font-size: 35px;
   }
-
-  .what-we-container .para_main {
-    margin-top: 0px;
-    text-align: center;
+  .container-custom .card-custom {
+      padding: 5px 10px;
   }
-  .what-we-container .head-h3 {
-    font-size: 22px;
-    padding: 0px 0px;
-    margin-bottom: 0px;
-  }
-  .what-we-container .counting-btn {
-    border: none;
-    border-radius: 50px;
-    padding: 0px 20px;
-    font-size: 14px;
-    color: #070707;
-    font-weight: 600;
-    margin-right: 8px;
-    background-color: #C7C7C7;
-    align-items: center;
-  }
-  .what-we-container .button-container {
-    text-align: center;
-  }
-  .what-we-container .swiper-pagination .swiper-pagination-bullet-active::before {
-    width: 13px;
-    height:13px;
-    top: -4px;
-    left: -4px;
-  }
-  .what-we-container .swiper-pagination .swiper-pagination-bullet-active {
-    width: 5px;
-    height: 5px;
-  }
-  
-.what-we-container .swiper-pagination .swiper-pagination-bullet {
-  
-  width: 5px;
-  height: 5px;
 }
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  /* .container-custom .font-weight-bold-custom {
+      font-size: 45px;
+  } */
+  /* .container-custom .card-custom {
+      padding: 5px 12px;
+  } */
 }
