--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,7 +52,7 @@ body {
 .para_main {
   margin: 0;
   font-weight: 400;
-  color: #070707;
+  color: #9F9F9F;
   font: normal normal normal 16px/35px Lato;
   letter-spacing: 0px;
   font-size: 16px;
@@ -61,29 +61,28 @@ body {
 }
 
 .body-paragraph {
-  text-align: center;
-font: normal normal normal 16px/35px Lato;
-letter-spacing: 0px;
-color: #FFFFFF;
-opacity: 1;
+  font: normal normal normal 16px/35px Lato;
+  letter-spacing: 0px;
+  color: #9F9F9F;
+  opacity: 1;
 }
 
 .head-h1 {
-  font-size: 70px;
-  font-weight: 9000;
-  color: #FFFFFF;
+  font-weight: 900;
   margin: 0px;
-  font: normal normal normal 70px/87px Novar;
   margin-bottom: 16px;
   text-transform: uppercase;
+  font: normal normal bold 55px/89px Open Sans;
+  letter-spacing: 1;
+  color: #FFFFFF;
+  opacity: 1;
 }
 
-.head-bg
-{
+.head-bg {
   background-image: linear-gradient(#78757581, #78757581);
   background-repeat: no-repeat;
   background-size: 100% 28px;
-  background-position: bottom ;
+  background-position: bottom;
 }
 
 .head-h2 {
@@ -278,15 +277,14 @@ opacity: 1;
 
 
 .connect-button {
-  background-color: transparent;
-  color: #FFFFFF;
+  background: #ACF96D 0% 0% no-repeat padding-box;
+  color: #000000;
   border: none;
-  padding: 16px 38px;
-  border-radius: 26px;
-  font-size: 14px;
+  padding: 10px 50px;
+  border-radius: 34px;
+  opacity: 1;
+  font-size: 16px;
   cursor: pointer;
-  border: 1px solid white;
-  font: normal normal normal 16px/13px Novar;
 }
 
 .connect-button:hover {
@@ -318,17 +316,17 @@ opacity: 1;
 }
 
 @media (max-width: 992px) {
-  .head-h1
-  {
-    
-  font-size: 40px;
-  font-weight: 700;
+  .head-h1 {
+
+    font-size: 40px;
+    font-weight: 700;
   }
-  .head-h2
-  {
+
+  .head-h2 {
     font-size: 36px;
-  font-weight: 500;
+    font-weight: 500;
   }
+
   .h2_main {
     font-size: 16px;
   }
