--- a/frontend/src/components/HomeHero/HomeHero.css
+++ b/frontend/src/components/HomeHero/HomeHero.css
@@ -1,16 +1,12 @@
 .home-hero {
     position: relative;
     height: 100vh;
-    /* background: url('../../../public/images/creatives/Home-banner.jpg') no-repeat center center/cover; */
     background-color: #131313;
 }
 
 .Homehero-content .head-h1 {
-    /* font-weight: 700;
-    letter-spacing: 0px;
-    color: #FFFFFF;
-    text-align: left;
-    letter-spacing: -4.16px; */
+    font: normal normal bold 80px/89px Open Sans;
+    padding: 0px 20px 0px 00px;
 }
 
 .Homehero-content .para_main {
@@ -50,11 +46,6 @@
     align-items: center;
     margin-top: 6px;
 }
-
-/* .home-hero .banner-img {
-    background-color: #717C93;
-  
-  } */
 
 .Homehero-content .main-head {
     color: #717C93;
@@ -138,7 +129,8 @@
     }
 
     .Homehero-content .head-h1 {
-        font-size: 2em;
+        font-size: 3em;
+        padding: 0px;
     }
 
     .Homehero-content .para_main {
@@ -176,8 +168,9 @@
 /* Extra small screens */
 @media (max-width: 480px) {
     .Homehero-content .head-h1 {
-        font-size: 2em;
+        font-size: 3em;
         line-height: 1.5;
+        padding: 0px;
     }
 
     .Homehero-content .para_main {
