--- a/frontend/src/components/VisionAndMission/VisionAndMission.css
+++ b/frontend/src/components/VisionAndMission/VisionAndMission.css
@@ -5,11 +5,8 @@
 }
 
 .ourservices-container .head-h1 {
-  /* font-size: 44px;
-  font-weight: 600;
-  margin: 0px;
-  font-family: "Inter", sans-serif;
-  margin-bottom: 16px; */
+  color: #131313;
+  font: normal normal bold 80px/88px Open Sans;
 
 }
 
@@ -48,11 +45,12 @@
 }
 
 .ourservices-container .right-section {
-  padding: 2vh 3vh;
+  padding: 2vh 4vh;
 }
 
 .ourservices-container .large-img {
   width: 100%;
+  padding: 2vh 4vh;
 }
 
 .ourservices-container .flex-container {
@@ -106,6 +104,10 @@
   font-weight: 700;
 }
 
+.ourservices-container .connect-button {
+  border: none;
+}
+
 .ourservices-container .head-bg {}
 
 /* Media Queries for Responsive Design */
@@ -140,8 +142,8 @@
 
   .ourservices-container .head-h1 {
     text-align: center;
-    font-size: 26px;
-
+    font: normal normal bold 50px/60px Open Sans;
+    letter-spacing: 0px;
   }
 
   .ourservices-container .para_main {
@@ -149,13 +151,12 @@
   }
 }
 
-
 @media (max-width: 768px) {
   .ourservices-container {
     padding: 25px 20px;
   }
 
-  .ourservices-container .left-section {
+  .ourservices-container .ourservices-container .left-section {
     padding: 0vh 1vh;
     text-align: center;
   }
