--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,6 +60,13 @@ body {
   line-height: 2;
 }
 
+.spanHead {
+  font: normal normal bold 80px/89px Open Sans;
+  letter-spacing: -4.16px;
+  opacity: 1;
+  color: #ACF96D;
+}
+
 .body-paragraph {
   font: normal normal normal 16px/35px Lato;
   letter-spacing: 0px;
@@ -71,9 +78,8 @@ body {
   font-weight: 900;
   margin: 0px;
   margin-bottom: 16px;
-  text-transform: uppercase;
-  font: normal normal bold 55px/89px Open Sans;
-  letter-spacing: 1;
+  font: normal normal bold 55px/50px Open Sans;
+  letter-spacing: -4.16px;
   color: #FFFFFF;
   opacity: 1;
 }
@@ -99,10 +105,9 @@ body {
 
 .head-h3 {
   font-size: 16px;
-  font: normal normal normal 34px/37px Novar;
+  font: normal normal 600 16px/30px Open Sans;
   letter-spacing: 0px;
-  color: #070707;
-  text-transform: uppercase;
+  color: #FFFFFF;
   opacity: 1;
 }
 
@@ -280,7 +285,7 @@ body {
   background: #ACF96D 0% 0% no-repeat padding-box;
   color: #000000;
   border: none;
-  padding: 10px 50px;
+  padding: 10px 60px;
   border-radius: 34px;
   opacity: 1;
   font-size: 16px;
