Frontend Level Work

--- a/frontend/src/components/CaseStudyInner/CaseStudyInnerSection.css
+++ b/frontend/src/components/CaseStudyInner/CaseStudyInnerSection.css
@@ -6,3 +6,15 @@
 .main-section-container .img-conatiner {
     padding: 3vh 0vh;
 }
+
+.main-section-container .Heading-stuff {
+    padding: 2vh 0vh;
+}
+
+.main-section-container .head-h1 {
+    padding: 10px 0px;
+}
+
+.main-section-container .case-study-inner-section {
+    padding: 0vh 8vh;
+}
