--- a/frontend/src/components/CaseStudyFolder/CaseStudy.css
+++ b/frontend/src/components/CaseStudyFolder/CaseStudy.css
@@ -6,8 +6,6 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    transition: transform 0.5s ease;
 }
 
 .case-studies .head-h1 {
@@ -15,6 +13,7 @@
     letter-spacing: -1.3px;
     color: #131313;
     padding: 30px 0px 0px 0px;
+    text-align: center;
 }
 
 .case-study img {
@@ -24,7 +23,6 @@
 
 .case-studies .translate-y-top {
     transform: translateY(-180px);
-    /* Moves the box up on hover */
 }
 
 .case-studies .translate-y-top-second {
@@ -40,6 +38,7 @@
     margin-top: 10px;
     color: #000;
     text-decoration: underline;
+    font-size: 14px;
 }
 
 .case-studies .tags {
@@ -50,9 +49,9 @@
     background-color: #EAEBEB;
     color: #000000;
     margin-right: 10px;
-    font-size: 12px;
+    font-size: 14px;
     border-radius: 30px;
-    padding: 18px 40px 18px 40px;
+    padding: 15px 40px;
 }
 
 .case-studies .card-titles {
@@ -73,5 +72,93 @@
     align-items: center;
     justify-content: center;
     gap: 12px;
+}
 
+/* Media Queries for responsiveness */
+
+@media (max-width: 1200px) {
+    .case-studies {
+        padding: 150px 20px;
+    }
+
+    .case-studies .head-h1 {
+        font-size: 22px;
+    }
+
+    .tags .badge {
+        font-size: 13px;
+        padding: 12px 30px;
+    }
+
+    .case-study {
+        padding: 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    .case-studies {
+        padding: 100px 15px;
+    }
+
+    .case-studies .head-h1 {
+        font-size: 18px;
+        padding: 0px;
+    }
+
+    .tags .badge {
+        font-size: 12px;
+        padding: 10px 25px;
+    }
+
+    .case-study {
+        padding: 10px;
+    }
+
+    .case-studies .card-inner {
+        flex-direction: column;
+    }
+
+    .case-studies .tags {
+        padding: 2vh 0vh;
+    }
+
+    .tags .badge {
+        background-color: #EAEBEB;
+        color: #000000;
+        margin-right: 5px;
+        font-size: 14px;
+        border-radius: 30px;
+        padding: 15px 40px;
+    }
+}
+
+@media (max-width: 480px) {
+    .case-studies {
+        padding: 30px 0px;
+    }
+
+    .case-studies .head-h1 {
+        font-size: 16px;
+    }
+
+    .tags .badge {
+        font-size: 10px;
+        padding: 8px 20px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .case-study img {
+        width: 100%;
+    }
+
+    .case-studies .card-inner {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .case-studies .translate-y-top,
+    .case-studies .translate-y-top-second {
+        transform: none;
+    }
 }
