--- a/frontend/src/components/OurServices/CardBoxServicesSection.css
+++ b/frontend/src/components/OurServices/CardBoxServicesSection.css
@@ -7,7 +7,7 @@
 }
 
 .blog-section .head-h1 {
-    font: normal normal bold 65px/89px Open Sans;
+    font: normal normal bold 80px/89px Open Sans;
 }
 
 .blog-section .para_main {
@@ -35,7 +35,7 @@
     border-radius: 15px;
     overflow: hidden;
     width: 48%;
-    padding: 28px 20px;
+    padding: 32px 20px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
@@ -52,7 +52,7 @@
 }
 
 .blog-content {
-    padding: 20px 35px;
+    padding: 25px 35px;
     width: 60%;
     display: flex;
     flex-direction: column;
@@ -64,15 +64,16 @@
     font-size: 0.9em;
     color: #FFFFFF;
     margin-bottom: 10px;
+    font: normal normal normal 19px/36px Open Sans;
+    letter-spacing: 0px;
 }
 
 .blog-title {
-    font-size: 1.2em;
-    color: #ffffff;
-    font-weight: bold;
+    font: normal normal 400 25px/36px Open Sans;
+    letter-spacing: -1.3px;
+    color: #FFFFFF;
     text-align: left;
-    letter-spacing: 2;
-    line-height: 1.5;
+    line-height: 1.7;
     opacity: 1;
 }
 
@@ -100,6 +101,7 @@
     .blog-content {
         width: 100%;
         text-align: center;
+        padding: 10px 0px 0px 0px;
     }
 
     .blog-section .para_main {
@@ -108,6 +110,9 @@
 
     .blog-section .blog-title {
         text-align: center;
+    }
+    .blog-section .head-h1 {
+        font: normal normal bold 55px/75px Open Sans;
     }
 }
 
