--- a/frontend/src/components/HomeHero/HomeHero.css
+++ b/frontend/src/components/HomeHero/HomeHero.css
@@ -4,6 +4,10 @@
     background-color: #131313;
 }
 
+.Homehero-content {
+    padding: 30vh 0vh 20vh;
+}
+
 .Homehero-content .head-h1 {
     font: normal normal bold 75px/89px Open Sans;
     padding: 0px 20px 0px 00px;
@@ -54,7 +58,7 @@
 .home-hero .social-media-icons {
     display: flex;
     gap: 12px;
-    padding: 2.7vh 0vh 0vh 0vh;
+    padding: 3vh 0vh 0vh 0vh;
     align-items: center;
 }
 
@@ -145,6 +149,7 @@
     .Homehero-content {
         text-align: center;
         margin-bottom: 20px;
+        padding: 0vh;
     }
 
     .Homehero-content .head-h1 {
@@ -162,9 +167,9 @@
     }
 
     .Homehero-content .connect-button {
-        padding: 9px 28px;
+        padding: 4px 22px;
         font-size: 12px;
-        /* width: 140px; */
+        width: 132px;
     }
 
     .social-media-icons {
