--- a/frontend/src/components/ProjectsDones/ProjectsDone.css
+++ b/frontend/src/components/ProjectsDones/ProjectsDone.css
@@ -15,6 +15,8 @@
   margin-top: 22px;
 }
 
+
+
 /* .container-custom .font-weight-bold-custom {
   font-family: "Inter", sans-serif;
   font-weight: 600;
@@ -32,6 +34,7 @@
   align-items: center;
   width: 100%;
   justify-content: center;
+  gap: 10px;
   /* height: 250px; */
   box-shadow: 0px 4px 20px -0px rgba(0,0,0,.1), /* Top shadow */
   0px 4px 20px -0px rgba(0,0,0,.1);  /* Bottom shadow */
