--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -286,7 +286,7 @@ body {
   background: #ACF96D 0% 0% no-repeat padding-box;
   color: #000000;
   border: none;
-  padding: 11px 60px;
+  padding: 9px 60px;
   border-radius: 34px;
   opacity: 1;
   cursor: pointer;
@@ -320,6 +320,18 @@ body {
   font-weight: 300;
   color: #ffffff;
   background-color: #A5CD37;
+}
+
+@media(min-width:1300px) {
+
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+      max-width: 75% !important;
+  }
 }
 
 @media (max-width: 992px) {
