--- a/frontend/src/components/Header/Navbar.module.css
+++ b/frontend/src/components/Header/Navbar.module.css
@@ -6,10 +6,12 @@
   position: absolute;
   z-index: 99;
 }
+
 .mobileHeader {
   display: none;
   width: 100%;
 }
+
 .nav {
   height: 100px;
   width: 100%;
@@ -23,6 +25,7 @@
   padding: 0vh 1vh;
 
 }
+
 .logo {
   cursor: pointer;
   max-height: 160px;
@@ -30,6 +33,7 @@
   padding: 8px;
 
 }
+
 .navList {
   height: 100%;
   display: flex;
@@ -38,11 +42,13 @@
   flex-direction: row;
   gap: 48px;
 }
+
 .navList a {
   text-decoration: none;
   color: #9F9F9F;
   font-size: 14px;
 }
+
 .link {
   font-family: "Inter", sans-serif;
   text-decoration: none;
@@ -50,14 +56,17 @@
   transition: 0.1s ease;
   font-weight: 400;
   letter-spacing: 1px;
-  
+
 }
+
 .link:hover {
   color: #FFFFFF;
 }
+
 .activeLink {
   color: #FFFFFF;
 }
+
 .buttonCont {
   height: 100%;
   display: flex;
@@ -69,16 +78,15 @@
 
 .buttonCont button {
   background-color: transparent;
-  color:#FFFFFF; 
+  color: #FFFFFF;
   border: none;
-  
-  border-radius: 26px; 
-  cursor: pointer; 
+  border-radius: 26px;
+  cursor: pointer;
   border: 1px solid white;
   font: normal normal 600 16px/20px Open Sans;
-  
-
+  padding: 14px 50px;
 }
+
 .button1 {
   border: 1px solid #1F2F54;
   background-color: transparent;
@@ -87,50 +95,57 @@
   /* width: 40px; */
   transition: 0.1s ease;
 }
+
 .button1:hover {
   border: 1px solid #cb1212;
   color: #cb1212;
 }
+
 .button2 {
   border: 1px solid #cb1212;
   background-color: #EE202D;
   color: #FFFFFF;
- 
+
 }
+
 .button2:hover {
   border-color: 1px solid #cb1212e0;
   background-color: #cb1212e0;
 }
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
+
 .drop_downContent {
   position: absolute;
   border-top: 1px solid rgb(45, 45, 45);
-  background-image: linear-gradient(to right, rgb(25, 25, 25) , rgb(79, 79, 79));
+  background-image: linear-gradient(to right, rgb(25, 25, 25), rgb(79, 79, 79));
   width: 100%;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
   z-index: 1;
   animation: fadeInFromNone 0.5s ease-out;
 }
+
 @keyframes fadeInFromNone {
   0% {
-      display: none;
-      opacity: 0;
+    display: none;
+    opacity: 0;
   }
 
   1% {
-      display: block;
-      opacity: 0;
+    display: block;
+    opacity: 0;
   }
 
   100% {
-      display: block;
-      opacity: 1;
+    display: block;
+    opacity: 1;
   }
 }
+
 .listCol {
   width: 100%;
   height: 100%;
@@ -140,6 +155,7 @@
   flex-direction: column;
   gap: 10px;
 }
+
 .listCol h3 {
   font-family: "Inter", sans-serif;
   text-align: start;
@@ -147,6 +163,7 @@
   color: #c10f0f;
   font-size: 25px;
 }
+
 .listCol a {
   font-family: "Mulish";
   align-self: flex-start;
@@ -155,15 +172,19 @@
   font-size: 14px;
   text-decoration: none;
 }
+
 .listColLink {
   color: #ffffff;
 }
+
 .listColLinkActive {
   color: #c10f0f;
 }
+
 .listCol a:hover {
   color: #e8e8e8;
 }
+
 .box {
   width: 100%;
   height: 100%;
@@ -178,6 +199,7 @@
   border-bottom-right-radius: 12px;
   padding: 60px 50px 60px 50px;
 }
+
 .head {
   width: 100%;
   display: flex;
@@ -186,24 +208,29 @@
   flex-direction: row;
   gap: 15px;
 }
+
 .head img {
   width: 24px;
   height: 24px;
   align-self: center;
 }
+
 .head h4 {
   color: white;
   text-align: start;
   align-self: flex-start;
 }
+
 .box p {
   color: white;
   text-align: start;
   align-self: flex-start;
 }
+
 .box a {
   align-self: flex-start;
 }
+
 .box button {
   align-self: flex-start;
   font-family: "Montserrat", sans-serif;
@@ -218,7 +245,8 @@
   border: 1px solid #c10f0f;
   transition: 0.2s ease-in;
 }
-.box button:hover{
+
+.box button:hover {
   background-color: #c10f0f;
   color: white;
   border: 1px solid white;
@@ -229,6 +257,7 @@
   .desktopHeader {
     display: none;
   }
+
   .mobileHeader {
     display: block;
   }
