--- a/frontend/src/components/Header/NavbarCS.css
+++ b/frontend/src/components/Header/NavbarCS.css
@@ -269,7 +269,7 @@
   text-decoration: none;
   font-family: "Manrope", sans-serif;
   width: 100%;
- 
+
 
 }
 
@@ -392,9 +392,7 @@
 
 
 
-@media(max-width : 1200px) {
-  
-}
+@media(max-width : 1200px) {}
 
 @media (max-width: 1200px) {
   .megamenu_cs1 {
